--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
       <div class="panel login">
         <img id="logo" src="https://images.template.net/76793/Instagram-Logo-Black-And-White-Vector-1.jpg" alt="logo">
-        <form>
+        <form action="feed.html">
           <input
             class="input-box"
             type="text"
