--- a/feed.html
+++ b/feed.html
@@ -15,6 +15,10 @@
       <div id="interaction-band">
         <img id="like" src="https://w7.pngwing.com/pngs/387/843/png-transparent-favorite-heart-like-likes-love-loved-basic-ui-2-line-icon.png" alt="like logo" width="50" height="50" style="cursor: pointer;">
       </div>
+      <div id="comments">
+        <input type="text" placeholder="Add a comment..." id="comment-input" />
+        <button id="submit-comment">Comment</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
